# qweather-api

./: README.md  pyproject.toml
examples/: quick_start.py
src/qweather_api/: __init__.py  dataframes.py  lookup.py
src/qweather_api/api/: client.py  config.py  types.py
src/qweather_api/api/model/: daily_weather.py  hourly_weather.py  now_weather.py
src/qweather_api/schema/: __init__.py  city.py  geo_coordinate.py
