[project]
name = "qweather-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "cryptography>=46.0.3",
    "httpx>=0.28.1",
    "levenshtein>=0.25.1",
    "pandas>=2.0.3",
    "pydantic>=2.10.6",
    "pyjwt>=2.9.0",
]

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
